# mas665-hw2-crewai-nanda-agent

./: .gitignore  README.md  crewai_agent.py  fullchain.pem  privkey.pem  pyproject.toml
src/digital_twin_like/: crew.py  main.py
src/digital_twin_like/config/: agents.yaml  tasks.yaml
